2008-09-16  Derek R. Price  <derek@ximbiot.com>

	* client.c (arg_should_not_be_sent_to_server): Avoid memory leak.

	* client.c (arg_should_not_be_sent_to_server): Simplify.
	* subr.c (update_dir_name): New function.
	* subr.h (update_dir_name): Prototype for same.

	* base.c (base_diff): Exit with error code 2 on real errors, like diff,
	since error code 1 means differences were found.

	* client.c (arg_should_not_be_sent_to_server): Return bool.

	* run.c: Assume POSIX signal handling, via GNULIB.

2008-09-15  Derek R. Price  <derek@ximbiot.com>

	Compensate for GNULIB update.
	* buffer.h, rcs.c: Assume <unistd.h> instead of "getpagesize.h".
	* filesubr.c, main.c, server.c: Assume <stdlib.h> in lieu of "setenv.h".
	* gpg.h: #include "subr.h" to supress a warning.
	* log.c: Ditto, but for "quote.h".
	* subr.c: s/mreadlink/areadlink/.

	* client.c (send_repository): More cleanup.

	* add.c, admin.c, classify.c, commit.c, log.c, remove.c, tag.c:
	Improve error messages for consitency.
	* sanity.sh: Update to compensate.

2008-09-12  Derek R. Price  <derek@ximbiot.com>

	* subr.c (format_cmdline): Note new file/line args in header block.

	* cvs.h: Remove comment.

	* cvs.h [PIOPT_ALL] (CALLPROC, Parse_Info): Move defs and protos to...
	* parseinfo.h: ...similarly named entities here.
	* subr.h (format_cmdline_walklist_closure): Store file and line number
	for error messages.
	(format_cmdline): Update prototype with file and line number.
	* admin.c (postadmin_proc), commit.c (precommit_proc), edit.c
	(notify_proc), fileattr.c (postwatch_proc), logmsg.c (rcsinfo_proc,
	do_editor, verifymsg_proc, do_verify, Update_Logfile, logfile_write,
	update_logfile_proc), parseinfo.c (Parse_Info), server.c
	(prepost_proxy_proc, template_proc, server_template), subr.c
	(format_cmdline), tag.c (pretag_proc, posttag_proc: Accept file & line
	number and use in error messages.
	* sign.c (gen_signature)i, verify.c (verify_signature): Pass dummy file
	and line to format_cmdline().